[gd_scene load_steps=10 format=3 uid="uid://ghfx3cjo8ufs"]

[ext_resource type="Script" path="res://scenes/Inventory/pause_menu.gd" id="1_14nv5"]
[ext_resource type="FontFile" uid="uid://cw8tvefhfl1gn" path="res://tilemap/PilotCommandSpacedItalic-eZGMl.otf" id="2_4rigx"]
[ext_resource type="Texture2D" uid="uid://cy2h8dlso2coh" path="res://tilemap/inventory/Inventory_background.png" id="2_dt1jr"]
[ext_resource type="PackedScene" uid="uid://xlffws4wl7ob" path="res://scenes/Inventory/inventory_slot.tscn" id="3_560b2"]
[ext_resource type="Script" path="res://scenes/Inventory/scripts/inventory_ui.gd" id="3_rtkyl"]
[ext_resource type="Resource" uid="uid://ja5yh2w5xutb" path="res://scenes/Inventory/player_inventory.tres" id="4_ludxy"]

[sub_resource type="LabelSettings" id="LabelSettings_vcsqc"]
font = ExtResource("2_4rigx")

[sub_resource type="AtlasTexture" id="AtlasTexture_w830j"]
atlas = ExtResource("2_dt1jr")
region = Rect2(0, 0, 20, 20)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_uge5q"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
texture = SubResource("AtlasTexture_w830j")
texture_margin_left = 11.0
texture_margin_top = 11.0
texture_margin_right = 11.0
texture_margin_bottom = 11.0

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_14nv5")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
modulate = Color(1, 1, 1, 0.239216)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.141176, 0.141176, 0.141176, 1)

[node name="Label" type="Label" parent="Control"]
modulate = Color(1, 1, 1, 0.627451)
custom_minimum_size = Vector2(10, 10)
layout_mode = 0
offset_left = 45.0
offset_top = 55.0
offset_right = 130.0
offset_bottom = 78.0
text = "Paused
"
label_settings = SubResource("LabelSettings_vcsqc")

[node name="PanelContainer" type="PanelContainer" parent="Control"]
layout_mode = 0
offset_left = 37.0
offset_top = 112.0
offset_right = 233.0
offset_bottom = 200.0
theme_override_styles/panel = SubResource("StyleBoxTexture_uge5q")

[node name="GridContainer" type="GridContainer" parent="Control/PanelContainer"]
layout_mode = 2
columns = 5
script = ExtResource("3_rtkyl")
data = ExtResource("4_ludxy")

[node name="InventorySlot" parent="Control/PanelContainer/GridContainer" instance=ExtResource("3_560b2")]
layout_mode = 2

[node name="InventorySlot2" parent="Control/PanelContainer/GridContainer" instance=ExtResource("3_560b2")]
layout_mode = 2

[node name="InventorySlot3" parent="Control/PanelContainer/GridContainer" instance=ExtResource("3_560b2")]
layout_mode = 2

[node name="InventorySlot4" parent="Control/PanelContainer/GridContainer" instance=ExtResource("3_560b2")]
layout_mode = 2

[node name="InventorySlot5" parent="Control/PanelContainer/GridContainer" instance=ExtResource("3_560b2")]
layout_mode = 2

[node name="InventorySlot6" parent="Control/PanelContainer/GridContainer" instance=ExtResource("3_560b2")]
layout_mode = 2

[node name="InventorySlot7" parent="Control/PanelContainer/GridContainer" instance=ExtResource("3_560b2")]
layout_mode = 2

[node name="InventorySlot8" parent="Control/PanelContainer/GridContainer" instance=ExtResource("3_560b2")]
layout_mode = 2

[node name="InventorySlot9" parent="Control/PanelContainer/GridContainer" instance=ExtResource("3_560b2")]
layout_mode = 2

[node name="InventorySlot10" parent="Control/PanelContainer/GridContainer" instance=ExtResource("3_560b2")]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -261.0
offset_top = 72.0
offset_right = -21.0
offset_bottom = 113.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button_Save" type="Button" parent="Control/HBoxContainer"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_4rigx")
text = "SAVE
"

[node name="Button_Load" type="Button" parent="Control/HBoxContainer"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_4rigx")
text = "LOAD
"

[node name="Button_Exit" type="Button" parent="Control/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_4rigx")
text = "THO√ÅT
"
